Tagged CAV 2021 (part 1)

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -53,76 +53,76 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_39) Counterexample-Guided Partial Bounding for Recursive Function Synthesis.
 	[Azadeh Farzan](https://dblp.org/pid/89/148.html), [Victor Nicolet](https://dblp.org/pid/194/2361.html)
-	⚙️
+	✅ Presents [[Synduce]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_32) Not All Bugs Are Created Equal, But Robust Reachability Can Tell the Difference.
 	[Guillaume Girol](https://dblp.org/pid/272/7154.html), [Benjamin Farinier](https://dblp.org/pid/215/4462.html), [Sébastien Bardin](https://dblp.org/pid/b/SebastienBardin.html)
-	⚙️
+	✅ Presents [BINSEC/RSE](BINSEC-RSE.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_2) Balancing Automation and Control for Formal Verification of Microprocessors.
 	[Shilpi Goel](https://dblp.org/pid/129/1546.html), [Anna Slobodová](https://dblp.org/pid/34/5435.html), [Rob Sumners](https://dblp.org/pid/88/4004.html), [Sol Swords](https://dblp.org/pid/06/513.html)
-	⚙️
+	✅ Presents [[FGL]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_7) Robustness Verification of Quantum Classifiers.
 	[Ji Guan](https://dblp.org/pid/205/2739.html), [Wang Fang](https://dblp.org/pid/65/2225.html), [Mingsheng Ying](https://dblp.org/pid/13/6525.html)
-	⚙️
+	✅ Implemented on TensorFlow Quantum. Tool does not seem to have a name or an publicly available implementation.
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_37) Synthesis with Asymptotic Resource Bounds.
 	[Qinheping Hu](https://dblp.org/pid/201/4822.html), [John Cyphert](https://dblp.org/pid/211/9268.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html)
-	⚙️
+	✅ Presents [[SynPlexity]], expands [[Synquid]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_5) Deductive Synthesis of Programs with Pointers - Techniques, Challenges, Opportunities - (Invited Paper).
 	[Shachar Itzhaky](https://dblp.org/pid/62/8636.html), [Hila Peleg](https://dblp.org/pid/130/9934.html), [Nadia Polikarpova](https://dblp.org/pid/13/7489.html), [Reuben N. S. Rowe](https://dblp.org/pid/46/9730.html), [Ilya Sergey](https://dblp.org/pid/77/9770.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_11) Verisig 2.0 - Verification of Neural Network Controllers Using Taylor Model Preconditioning.
 	[Radoslav Ivanov](https://dblp.org/pid/144/4256.html), [Taylor J. Carpenter](https://dblp.org/pid/229/8553.html), [James Weimer](https://dblp.org/pid/79/11048.html), [Rajeev Alur](https://dblp.org/pid/a/RAlur.html), [George J. Pappas](https://dblp.org/pid/p/GeorgeJPappas.html), [Insup Lee](https://dblp.org/pid/l/InsupLee.html)
-	⚙️
+	✅ Extends [[Verisig]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_18) Delay-Bounded Scheduling Without Delay!
 	[Andrew Johnson](https://dblp.org/pid/69/2358.html), [Thomas Wahl](https://dblp.org/pid/72/5272.html)
-	⚙️
+	✅ Seems to be only prototype implementations of the proposed algorithms. Artifact: https://zenodo.org/record/4831590
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_13) PEREGRiNN - Penalized-Relaxation Greedy Neural Network Verifier.
 	[Haitham Khedr](https://dblp.org/pid/229/4157.html), [James Ferlez](https://dblp.org/pid/143/2685.html), [Yasser Shoukry](https://dblp.org/pid/123/7829.html)
-	⚙️
+	✅ Presents [[PEREGRiNN]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_3) Algebraic Program Analysis.
 	[Zachary Kincaid](https://dblp.org/pid/61/6578.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html), [John Cyphert](https://dblp.org/pid/211/9268.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_20) GenMC - A Model Checker for Weak Memory Models.
 	[Michalis Kokologiannakis](https://dblp.org/pid/204/3706.html), [Viktor Vafeiadis](https://dblp.org/pid/69/1549.html)
-	⚙️
+	✅ Presents [[GenMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_27) Formally Verified Switching Logic for Recoverability of Aircraft Controller.
 	[Ratan Lal](https://dblp.org/pid/170/6323.html), [Aaron McKinnis](https://dblp.org/pid/297/3199.html), [Dustin Hauptman](https://dblp.org/pid/297/2912.html), [Shawn Keshmiri](https://dblp.org/pid/256/7047.html), [Pavithra Prabhakar](https://dblp.org/pid/74/6354.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_23) HybridSynchAADL - Modeling and Formal Analysis of Virtually Synchronous CPSs in AADL.
 	[Jaehun Lee](https://dblp.org/pid/14/824.html), [Sharon Kim](https://dblp.org/pid/267/9153.html), [Kyungmin Bae](https://dblp.org/pid/03/7567.html), [Peter Csaba Ölveczky](https://dblp.org/pid/11/2202.html)
-	⚙️
+	✅ Presents [[HybridSynchAADL]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_25) Implicit Semi-Algebraic Abstraction for Polynomial Dynamical Systems.
 	[Sergio Mover](https://dblp.org/pid/59/7880.html), [Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Ahmed Irfan](https://dblp.org/pid/149/3835.html), [Stefano Tonetta](https://dblp.org/pid/t/StefanoTonetta.html)
-	⚙️
+	✅ They have implemented the proposed algorithms, seems to be prototypes. Artifact: http://www.sergiomover.eu/cav2021.html (download not available on 13 Sept. '21)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_10) Scalable Polyhedral Verification of Recurrent Neural Networks.
 	[Wonryong Ryou](https://dblp.org/pid/266/1379.html), [Jiayu Chen](https://dblp.org/pid/80/8422.html), [Mislav Balunovic](https://dblp.org/pid/231/7686.html), [Gagandeep Singh ](https://dblp.org/pid/64/3747-1.html), [Andrei Marian Dan](https://dblp.org/pid/131/0034.html), [Martin T. Vechev](https://dblp.org/pid/93/2189.html)
-	⚙️
+	✅ Presents [[PROVER]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_6) DNNV - A Framework for Deep Neural Network Verification.
 	[David Shriver](https://dblp.org/pid/202/8415.html), [Sebastian G. Elbaum](https://dblp.org/pid/e/SebastianGElbaum.html), [Matthew B. Dwyer](https://dblp.org/pid/d/MatthewBDwyer.html)
-	⚙️
+	✅ Presents [DNNV](DNNV.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_28) SceneChecker - Boosting Scenario Verification Using Symmetry Abstractions.
 	[Hussein Sibai](https://dblp.org/pid/198/6856.html), [Yangge Li](https://dblp.org/pid/228/5704.html), [Sayan Mitra](https://dblp.org/pid/07/3797.html)
-	⚙️
+	✅ Presents [[SceneChecker]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_12) Robustness Verification of Semantic Segmentation Neural Networks Using Relaxed Reachability.
 	[Hoang-Dung Tran](https://dblp.org/pid/160/7295.html), [Neelanjana Pal](https://dblp.org/pid/173/8540.html), [Patrick Musau](https://dblp.org/pid/215/3389.html), [Diego Manzanas Lopez](https://dblp.org/pid/215/3580.html), [Nathaniel Hamilton](https://dblp.org/pid/200/7619.html), [Xiaodong Yang](https://dblp.org/pid/19/1551.html), [Stanley Bak](https://dblp.org/pid/16/7787.html), [Taylor T. Johnson](https://dblp.org/pid/96/11505.html)
-	⚙️
+	✅ Extends [NNV](NNV.md). Artifact: https://github.com/verivital/nnv/tree/cav2021/code/nnv/examples/Submission/CAV2021
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_35) Constraint-Based Relational Verification.
 	[Hiroshi Unno ](https://dblp.org/pid/24/6058.html), [Tachio Terauchi](https://dblp.org/pid/96/889.html), [Eric Koskinen](https://dblp.org/pid/38/5902.html)
-	⚙️
+	✅ Presents [[PCSat]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_1) NNrepair - Constraint-Based Repair of Neural Network Classifiers.
 	[Muhammad Usman ](https://dblp.org/pid/20/241-24.html), [Divya Gopinath](https://dblp.org/pid/16/7856.html), [Youcheng Sun](https://dblp.org/pid/126/5212.html), [Yannic Noller](https://dblp.org/pid/214/0370.html), [Corina S. Pasareanu](https://dblp.org/pid/03/4368.html)
-	⚙️
+	✅ Presents [[NNrepair]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_21) Synthesizing Invariant Barrier Certificates via Difference-of-Convex Programming.
 	[Qiuye Wang](https://dblp.org/pid/172/8095.html), [Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Bai Xue ](https://dblp.org/pid/74/2716-1.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html)
-	⚙️
+	✅ No name. Prototype implementation: https://github.com/Chenms404/BMI-DC
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_17) Gobra - Modular Specification and Verification of Go Programs.
 	[Felix A. Wolf](https://dblp.org/pid/276/5744.html), [Linard Arquint](https://dblp.org/pid/195/8358.html), [Martin Clochard](https://dblp.org/pid/139/2440.html), [Wytse Oortwijn](https://dblp.org/pid/178/0425.html), [João C. Pereira](https://dblp.org/pid/293/8268.html), [Peter Müller ](https://dblp.org/pid/m/PMuller1.html)
-	⚙️
+	✅ Presents [Gobra](Gobra.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_22) An Iterative Scheme of Safe Reinforcement Learning for Nonlinear Systems via Barrier Certificate Generation.
 	[Zhengfeng Yang](https://dblp.org/pid/68/3884.html), [Yidan Zhang](https://dblp.org/pid/11/8540.html), [Wang Lin](https://dblp.org/pid/36/5376.html), [Xia Zeng](https://dblp.org/pid/62/6760.html), [Xiaochao Tang](https://dblp.org/pid/297/3667.html), [Zhenbing Zeng](https://dblp.org/pid/56/2636.html), [Zhiming Liu ](https://dblp.org/pid/l/ZhimingLiu1.html)
-	⚙️
+	✅ Presents [[SRLBC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_29) Effective Hybrid System Falsification Using Monte Carlo Tree Search Guided by QB-Robustness.
 	[Zhenya Zhang](https://dblp.org/pid/98/4896.html), [Deyun Lyu](https://dblp.org/pid/292/9181.html), [Paolo Arcaini](https://dblp.org/pid/86/7855.html), [Lei Ma ](https://dblp.org/pid/20/6534-3.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html), [Jianjun Zhao](https://dblp.org/pid/71/6948.html)
-	⚙️
+	✅ Presents [[ForeSee]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_8) BDD4BNN - A BDD-Based Quantitative Analysis Framework for Binarized Neural Networks.
 	[Yedi Zhang](https://dblp.org/pid/230/8027.html), [Zhe Zhao](https://dblp.org/pid/28/6429.html), [Guangke Chen](https://dblp.org/pid/252/5255.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Taolue Chen](https://dblp.org/pid/28/4743.html)
-	⚙️
+	✅ Presents [[BDD4BNN]]
