Categorized subset of CAV 2021 (part 2)

--- a/Conferences/CAV 2021(2).md
+++ b/Conferences/CAV 2021(2).md
@@ -2,79 +2,79 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_1) Learning Probabilistic Termination Proofs.
 	[Alessandro Abate](https://dblp.org/pid/19/3904.html), [Mirco Giacobbe](https://dblp.org/pid/134/7846.html), [Diptarko Roy](https://dblp.org/pid/297/4044.html)
-	⚙️
+	✅ Nameless prototype implementation.
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_40) Lower-Bound Synthesis Using Loop Specialization and Max-SMT.
 	[Elvira Albert](https://dblp.org/pid/a/ElviraAlbert.html), [Samir Genaim](https://dblp.org/pid/24/2865.html), [Enrique Martin-Martin](https://dblp.org/pid/15/7982.html), [Alicia Merayo](https://dblp.org/pid/288/2702.html), [Albert Rubio](https://dblp.org/pid/29/6684.html)
-	⚙️
+	✅ Presents [[LOBER]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_9) JavaSMT 3 - Interacting with SMT Solvers in Java.
 	[Daniel Baier](https://dblp.org/pid/58/146.html), [Dirk Beyer ](https://dblp.org/pid/b/DirkBeyer1.html), [Karlheinz Friedberger](https://dblp.org/pid/130/3897.html)
-	⚙️
+	✅ Extends [JavaSMT](JavaSMT.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_25) Latticed k-Induction with an Application to Probabilistic Programs.
 	[Kevin Batz](https://dblp.org/pid/215/5068.html), [Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Philipp Schröer](https://dblp.org/pid/264/0074.html)
-	⚙️
+	✅ Presents [[KIPRO2]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_39) Debugging Network Reachability with Blocked Paths.
 	[Sam Bayless](https://dblp.org/pid/115/4378.html), [John D. Backes](https://dblp.org/pid/97/8857.html), [D. DaCosta](https://dblp.org/pid/297/2986.html), [B. F. Jones](https://dblp.org/pid/229/2607.html), [N. Launchbury](https://dblp.org/pid/297/3351.html), [P. Trentin](https://dblp.org/pid/297/4057.html), [K. Jewell](https://dblp.org/pid/297/3343.html), [S. Joshi](https://dblp.org/pid/12/2107.html), [M. Q. Zeng](https://dblp.org/pid/297/3137.html), [N. Mathews](https://dblp.org/pid/297/3743.html)
-	⚙️
+	❌ Case study, uses VPC Reachability Analyzer
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_15) Counting Minimal Unsatisfiable Subsets.
 	[Jaroslav Bendík](https://dblp.org/pid/181/7743.html), [Kuldeep S. Meel](https://dblp.org/pid/129/1623.html)
-	⚙️
+	✅ Presents [[CountMUST]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_32) LLMC - Verifying High-Performance Software.
 	[Freark I. van der Berg](https://dblp.org/pid/252/8684.html)
-	⚙️
+	✅ Presents [[LLMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_14) An SMT Solver for Regular Expressions and Linear Arithmetic over String Length.
 	[Murphy Berzish](https://dblp.org/pid/180/5429.html), [Mitja Kulczynski](https://dblp.org/pid/241/9575.html), [Federico Mora](https://dblp.org/pid/82/5093.html), [Florin Manea](https://dblp.org/pid/67/4899.html), [Joel D. Day](https://dblp.org/pid/130/7599.html), [Dirk Nowotka](https://dblp.org/pid/91/2495.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
-	⚙️
+	✅ Presents [[Z3str3RE]], expands [Z3](Z3.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_10) Efficient SMT-Based Analysis of Failure Propagation.
 	[Marco Bozzano](https://dblp.org/pid/66/3003.html), [Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Anthony Fernandes Pires](https://dblp.org/pid/85/10271.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Martin Jonás](https://dblp.org/pid/178/4046.html), [Greg Kimberly](https://dblp.org/pid/96/3814.html)
-	⚙️
+	✅ Presents [[SMT-PGFPS]], presented as a prototypical implementation. Compared to [[xSAP]] and [[Emmy]].
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_42) Diffy - Inductive Reasoning of Array Programs Using Difference Invariants.
 	[Supratik Chakraborty](https://dblp.org/pid/34/4525.html), [Ashutosh Gupta](https://dblp.org/pid/65/3925.html), [Divyesh Unadkat](https://dblp.org/pid/133/4630.html)
-	⚙️
+	✅ Presents [[Diffy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_41) Fast Computation of Strong Control Dependencies.
 	[Marek Chalupa](https://dblp.org/pid/178/3862.html), [David Klaska](https://dblp.org/pid/142/2804.html), [Jan Strejcek](https://dblp.org/pid/37/1716.html), [Lukás Tomovic](https://dblp.org/pid/263/1099.html)
-	⚙️
+	✅ Extends [[DG]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_23) Towards a Trustworthy Semantics-Based Language Framework via Proof Generation.
 	[Xiaohong Chen ](https://dblp.org/pid/02/1438-2.html), [Zhengyao Lin](https://dblp.org/pid/290/4042.html), [Minh-Thai Trinh](https://dblp.org/pid/78/9861.html), [Grigore Rosu](https://dblp.org/pid/r/GrigoreRosu.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_18) Model-Checking Structured Context-Free Languages.
 	[Michele Chiari](https://dblp.org/pid/188/5725.html), [Dino Mandrioli](https://dblp.org/pid/m/DinoMandrioli.html), [Matteo Pradella](https://dblp.org/pid/33/713.html)
-	⚙️
+	✅ Presents [[POMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_29) Rigorous Roundoff Error Analysis of Probabilistic Floating-Point Computations.
 	[George A. Constantinides](https://dblp.org/pid/38/1966.html), [Fredrik Dahlqvist](https://dblp.org/pid/08/10019.html), [Zvonimir Rakamaric](https://dblp.org/pid/31/4458.html), [Rocco Salvia](https://dblp.org/pid/226/0551.html)
-	⚙️
+	✅ Presents [[PAF]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_19) Model Checking ømega-Regular Properties with Decoupled Search.
 	[Daniel Gnad](https://dblp.org/pid/162/9918.html), [Jan Eisenhut](https://dblp.org/pid/297/4083.html), [Alberto Lluch-Lafuente](https://dblp.org/pid/l/AlbertoLluchLafuente.html), [Jörg Hoffmann ](https://dblp.org/pid/26/836.html)
-	⚙️
+	✅ Prototype implementation, no name for the tool itself. Artifact: https://zenodo.org/record/4501646
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_30) Model-Free Reinforcement Learning for Branching Markov Decision Processes.
 	[Ernst Moritz Hahn](https://dblp.org/pid/78/6159.html), [Mateo Perez](https://dblp.org/pid/228/6991.html), [Sven Schewe](https://dblp.org/pid/38/5198.html), [Fabio Somenzi](https://dblp.org/pid/62/5300.html), [Ashutosh Trivedi ](https://dblp.org/pid/06/5756.html), [Dominik Wojtczak](https://dblp.org/pid/76/3220.html)
-	⚙️
+	✅ Presents [[Mungojerrie]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_24) Foundations of Fine-Grained Explainability.
 	[Sylvain Hallé](https://dblp.org/pid/81/715.html), [Hugo Tremblay](https://dblp.org/pid/141/0078.html)
-	⚙️
+	✅ Presents [[Petit Poucet]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_27) Model Checking Finite-Horizon Markov Chains with Probabilistic Inference.
 	[Steven Holtzen](https://dblp.org/pid/190/8502.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Marcell Vazquez-Chanlatte](https://dblp.org/pid/192/1518.html), [Todd D. Millstein](https://dblp.org/pid/93/4679.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html), [Guy Van den Broeck](https://dblp.org/pid/96/7521.html)
-	⚙️
+	✅ Presents [[Rubicon]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_20) AIGEN - Random Generation of Symbolic Transition Systems.
 	[Swen Jacobs](https://dblp.org/pid/73/6880.html), [Mouhammad Sakr](https://dblp.org/pid/203/8091.html)
-	⚙️
+	✅ Presents [[AIGEN]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_13) Interpolation and Model Checking for Nonlinear Arithmetic.
 	[Dejan Jovanovic](https://dblp.org/pid/56/2451.html), [Bruno Dutertre](https://dblp.org/pid/d/BDutertre.html)
-	⚙️
+	✅ Extends [Yices](Yices)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_28) Enforcing Almost-Sure Reachability in POMDPs.
 	[Sebastian Junges](https://dblp.org/pid/115/4386.html), [Nils Jansen ](https://dblp.org/pid/32/8421-1.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	⚙️
+	✅ Prototype implementation. Artifact available at: https://github.com/sjunges/shielding-POMDPs and https://zenodo.org/record/4784940
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_26) Runtime Monitors for Markov Decision Processes.
 	[Sebastian Junges](https://dblp.org/pid/115/4386.html), [Hazem Torfah](https://dblp.org/pid/140/9733.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	⚙️
+	✅ Presents [[Premise]], Expands [Storm](Storm.md). Artifact: https://zenodo.org/record/4724623
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_11) ddSMT 2.0 - Better Delta Debugging for the SMT-LIBv2 Language and Friends.
 	[Gereon Kremer](https://dblp.org/pid/168/1169.html), [Aina Niemetz](https://dblp.org/pid/115/4373.html), [Mathias Preiner](https://dblp.org/pid/115/4371.html)
-	⚙️
+	✅ Extends [[ddSMT]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_4) Decision Tree Learning in CEGIS-Based Termination Analysis.
 	[Satoshi Kura](https://dblp.org/pid/230/4314.html), [Hiroshi Unno ](https://dblp.org/pid/24/6058.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html)
-	⚙️
+	✅ Presents [MuVal](MuVal.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_35) An SMT Encoding of LLVM's Memory Model for Bounded Translation Validation.
 	[Juneyoung Lee](https://dblp.org/pid/181/5852.html), [Dongjoo Kim](https://dblp.org/pid/153/5927.html), [Chung-Kil Hur](https://dblp.org/pid/75/3287.html), [Nuno P. Lopes](https://dblp.org/pid/77/2149.html)
-	⚙️
+	✅ Extends [[Alive2]], added LLVM memory model
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_8) Porous Invariants.
 	[Engel Lefaucheux](https://dblp.org/pid/155/5136.html), [Joël Ouaknine](https://dblp.org/pid/55/4663.html), [David Purser](https://dblp.org/pid/222/8351.html), [James Worrell ](https://dblp.org/pid/90/2367.html)
 	⚙️
