Finished tagging CAV 2021 proceedings

--- a/Conferences/CAV 2021(2).md
+++ b/Conferences/CAV 2021(2).md
@@ -1,4 +1,5 @@
 ## Computer Aided Verification - 33rd International Conference, CAV 2021, Proceedings, Part II
+#classified
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_1) Learning Probabilistic Termination Proofs.
 	[Alessandro Abate](https://dblp.org/pid/19/3904.html), [Mirco Giacobbe](https://dblp.org/pid/134/7846.html), [Diptarko Roy](https://dblp.org/pid/297/4044.html)
@@ -77,52 +78,52 @@
 	✅ Extends [[Alive2]], added LLVM memory model
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_8) Porous Invariants.
 	[Engel Lefaucheux](https://dblp.org/pid/155/5136.html), [Joël Ouaknine](https://dblp.org/pid/55/4663.html), [David Purser](https://dblp.org/pid/222/8351.html), [James Worrell ](https://dblp.org/pid/90/2367.html)
-	⚙️
+	✅ Presents [[POROUS]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_5) ATLAS - Automated Amortised Complexity Analysis of Self-adjusting Data Structures.
 	[Lorenz Leutgeb](https://dblp.org/pid/227/5429.html), [Georg Moser](https://dblp.org/pid/32/2607.html), [Florian Zuleger](https://dblp.org/pid/69/2671.html)
-	⚙️
+	✅ Presents [ATLAS](ATLAS(2).md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_38) Gillian, Part II - Real-World Verification for JavaScript and C.
 	[Petar Maksimovic](https://dblp.org/pid/39/5949.html), [Sacha-Élie Ayoun](https://dblp.org/pid/256/5074.html), [José Fragoso Santos](https://dblp.org/pid/121/5552.html), [Philippa Gardner](https://dblp.org/pid/g/PhilippaGardner.html)
-	⚙️
+	✅ Presents [[Gillian]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_22) Pono - A Flexible and Extensible SMT-Based Model Checker.
 	[Makai Mann](https://dblp.org/pid/233/0746.html), [Ahmed Irfan](https://dblp.org/pid/149/3835.html), [Florian Lonsing](https://dblp.org/pid/85/828.html), [Yahan Yang](https://dblp.org/pid/131/7592.html), [Hongce Zhang](https://dblp.org/pid/187/8283.html), [Kristopher Brown](https://dblp.org/pid/238/0402.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html)
-	⚙️
+	✅ Presents [[Pono]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_36) Automatically Tailoring Abstract Interpretation to Custom Usage Scenarios.
 	[Muhammad Numair Mansur](https://dblp.org/pid/238/3227.html), [Benjamin Mariano](https://dblp.org/pid/251/2041.html), [Maria Christakis](https://dblp.org/pid/05/7730.html), [Jorge A. Navas](https://dblp.org/pid/77/4230a.html), [Valentin Wüstholz](https://dblp.org/pid/28/9798.html)
-	⚙️
+	✅ Presents [[tAIlor]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_12) Learning Union of Integer Hypercubes with Queries - (with Applications to Monadic Decomposition).
 	[Oliver Markgraf](https://dblp.org/pid/234/7983.html), [Daniel Stan](https://dblp.org/pid/155/5080.html), [Anthony W. Lin](https://dblp.org/pid/38/2655.html)
-	⚙️
+	✅ No name for prototype implementation. Artifact: https://zenodo.org/record/4742954
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_37) Functional Correctness of C Implementations of Dijkstra's, Kruskal's, and Prim's Algorithms.
 	[Anshuman Mohan](https://dblp.org/pid/251/2040.html), [Wei Xiang Leow](https://dblp.org/pid/297/4105.html), [Aquinas Hobor](https://dblp.org/pid/26/3410.html)
-	⚙️
+	❌ Verified several graph algorithms with Coq
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_21) GPU Acceleration of Bounded Model Checking with ParaFROST.
 	[Muhammad Osama](https://dblp.org/pid/161/8106.html), [Anton Wijs](https://dblp.org/pid/77/6678.html)
-	⚙️
+	✅ Presents [[ParaFROST]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_33) Formally Validating a Practical Verification Condition Generator.
 	[Gaurav Parthasarathy](https://dblp.org/pid/255/7215.html), [Peter Müller ](https://dblp.org/pid/m/PMuller1.html), [Alexander J. Summers](https://dblp.org/pid/76/5160.html)
-	⚙️
+	✅ Expands [Boogie](Boogie.md) (they call it "our certifying version of the Boogie verifier" so not sure whether it is integrated in the main Boogie repo)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_31) Cameleer - A Deductive Verification Tool for OCaml.
 	[Mário Pereira](https://dblp.org/pid/148/4309.html), [António Ravara](https://dblp.org/pid/13/6347.html)
-	⚙️
+	✅ Presents [[Cameleer]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_16) Sound Verification Procedures for Temporal Properties of Infinite-State Systems.
 	[Quentin Peyras](https://dblp.org/pid/197/3171.html), [Jean-Paul Bodeveix](https://dblp.org/pid/97/1837.html), [Julien Brunel](https://dblp.org/pid/75/6016.html), [David Chemouil](https://dblp.org/pid/65/4674.html)
-	⚙️
+	✅ Presents [[Cervino]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_2) Ghost Signals - Verifying Termination of Busy Waiting - Verifying Termination of Busy Waiting.
 	[Tobias Reinhard](https://dblp.org/pid/72/1598.html), [Bart Jacobs ](https://dblp.org/pid/j/BartJacobs2.html)
-	⚙️
+	✅ Extends [Verifast](Verifast.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_7) CoqQFBV - A Scalable Certified SMT Quantifier-Free Bit-Vector Solver.
 	[Xiaomu Shi](https://dblp.org/pid/14/10262.html), [Yu-Fu Fu](https://dblp.org/pid/252/4027.html), [Jiaxiang Liu ](https://dblp.org/pid/121/1088-1.html), [Ming-Hsien Tsai](https://dblp.org/pid/30/3940.html), [Bow-Yaw Wang](https://dblp.org/pid/36/6517.html), [Bo-Yin Yang](https://dblp.org/pid/37/4997.html)
-	⚙️
+	✅ Presents [[CoqQFBV]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_6) Theory Exploration Powered by Deductive Synthesis.
 	[Eytan Singher](https://dblp.org/pid/274/2088.html), [Shachar Itzhaky](https://dblp.org/pid/62/8636.html)
-	⚙️
+	✅ Presents [[TheSy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_34) Automatic Generation and Validation of Instruction Encoders and Decoders.
 	[Xiangzhe Xu](https://dblp.org/pid/276/3462.html), [Jinhua Wu](https://dblp.org/pid/52/4709.html), [Yuting Wang ](https://dblp.org/pid/09/8269-1.html), [Zhenguo Yin](https://dblp.org/pid/297/3873.html), [Pengfei Li](https://dblp.org/pid/10/1749.html)
-	⚙️
+	✅ Tool doesn't seem to have a name. Artifact: https://zenodo.org/record/4720184#.YIqLx2YzaqB
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_17) Progress in Certifying Hardware Model Checking Results.
 	[Emily Yu](https://dblp.org/pid/15/7179.html), [Armin Biere](https://dblp.org/pid/b/ArminBiere.html), [Keijo Heljanko](https://dblp.org/pid/h/KeijoHeljanko.html)
-	⚙️
+	✅ Presents [[Certifaiger]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_3) Reflections on Termination of Linear Loops.
 	[Shaowei Zhu ](https://dblp.org/pid/159/8704-1.html), [Zachary Kincaid](https://dblp.org/pid/61/6578.html)
-	⚙️
+	✅ Expands [[ComPACT]]. They refer to their tool/algorithm as $mp_{LR}$ (mortal preconditions via linear reflections). Artifact: https://zenodo.org/record/4742843
