Tagged CAV 2017 Part I

--- a/Conferences/CAV 2017.md
+++ b/Conferences/CAV 2017.md
@@ -2,88 +2,88 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_23) Automated Formal Synthesis of Digital Controllers for State-Space Physical Plants.
 	[Alessandro Abate](https://dblp.org/pid/19/3904.html), [Iury Bessa](https://dblp.org/pid/143/7442.html), [Dario Cattaruzza](https://dblp.org/pid/164/5620.html), [Lucas C. Cordeiro](https://dblp.org/pid/42/4311.html), [Cristina David](https://dblp.org/pid/01/3840.html), [Pascal Kesseli](https://dblp.org/pid/168/8498.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html), [Elizabeth Polgreen](https://dblp.org/pid/183/7353.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_24) Classification and Coverage-Based Falsification for Embedded Control Systems.
 	[Arvind S. Adimoolam](https://dblp.org/pid/202/3687.html), [Thao Dang ](https://dblp.org/pid/04/21-1.html), [Alexandre Donzé](https://dblp.org/pid/96/6273.html), [James Kapinski](https://dblp.org/pid/27/532.html), [Xiaoqing Jin](https://dblp.org/pid/54/7661.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_9) Repairing Decision-Making Programs Under Uncertainty.
 	[Aws Albarghouthi](https://dblp.org/pid/90/8295.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html), [Samuel Drews](https://dblp.org/pid/182/9259.html)
-	⚙️
+	✅ Presents [DIGITS](DIGITS.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_26) Context-Sensitive Dynamic Partial Order Reduction.
 	[Elvira Albert](https://dblp.org/pid/a/ElviraAlbert.html), [Puri Arenas](https://dblp.org/pid/a/PuriArenas.html), [Maria Garcia de la Banda](https://dblp.org/pid/b/MariaJGarciadelaBanda.html), [Miguel Gómez-Zamalloa](https://dblp.org/pid/26/669.html), [Peter J. Stuckey](https://dblp.org/pid/s/PeterJStuckey.html)
-	⚙️
+	✅ Extends/expands [SYCO](SYCO.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_25) GPUDrano - Detecting Uncoalesced Accesses in GPU Programs.
 	[Rajeev Alur](https://dblp.org/pid/a/RAlur.html), [Joseph Devietti](https://dblp.org/pid/83/3984.html), [Omar S. Navarro Leija](https://dblp.org/pid/202/8947.html), [Nimit Singhania](https://dblp.org/pid/116/4649.html)
-	⚙️
+	✅ Presents [GPUDrano](GPUDrano.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_10) Value Iteration for Long-Run Average Reward in Markov Decision Processes.
 	[Pranav Ashok](https://dblp.org/pid/200/8227.html), [Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Przemyslaw Daca](https://dblp.org/pid/146/0751.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html), [Tobias Meggendorfer](https://dblp.org/pid/194/2764.html)
-	⚙️
+	✅ Extends [PRISM](PRISM.md) ? (Implemented as a package in the PRISM model checker)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_8) Ensuring the Reliability of Your Model Checker - Interval Iteration for Markov Decision Processes.
 	[Christel Baier](https://dblp.org/pid/b/ChristelBaier.html), [Joachim Klein ](https://dblp.org/pid/k/JoachimKlein1.html), [Linda Leuschner](https://dblp.org/pid/147/5951.html), [David Parker ](https://dblp.org/pid/33/3095.html), [Sascha Wunderlich](https://dblp.org/pid/143/2676.html)
-	⚙️
+	✅ Expands [PRISM](PRISM.md), Artifact: https://wwwtcs.inf.tu-dresden.de/ALGI/PUB/CAV17/
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_20) Simulation-Equivalent Reachability of Large Linear Systems with Inputs.
 	[Stanley Bak](https://dblp.org/pid/16/7787.html), [Parasara Sridhar Duggirala](https://dblp.org/pid/94/8863.html)
-	⚙️
+	✅ Extends [Hylaa](Hylaa.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_18) Runtime Verification of Temporal Properties over Out-of-Order Data Streams.
 	[David A. Basin](https://dblp.org/pid/b/DavidABasin.html), [Felix Klaedtke](https://dblp.org/pid/27/6182.html), [Eugen Zalinescu](https://dblp.org/pid/65/4319.html)
-	⚙️
+	✅ Nameless prototype tool
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_29) Pithya - A Parallel Tool for Parameter Synthesis of Piecewise Multi-affine Dynamical Systems.
 	[Nikola Benes](https://dblp.org/pid/71/1110.html), [Lubos Brim](https://dblp.org/pid/92/3060.html), [Martin Demko](https://dblp.org/pid/167/4522.html), [Samuel Pastva](https://dblp.org/pid/167/4487.html), [David Safránek](https://dblp.org/pid/86/2438.html)
-	⚙️
+	✅ Presents [Pithya](Pithya.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_12) Learning a Static Analyzer from Data.
 	[Pavol Bielik](https://dblp.org/pid/32/11105.html), [Veselin Raychev](https://dblp.org/pid/28/8412.html), [Martin T. Vechev](https://dblp.org/pid/93/2189.html)
-	⚙️
+	✅ Nameless prototype tool
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_21) MightyL - A Compositional Translation from MITL to Timed Automata.
 	[Thomas Brihaye](https://dblp.org/pid/68/5725.html), [Gilles Geeraerts](https://dblp.org/pid/95/422.html), [Hsi-Ming Ho](https://dblp.org/pid/150/7427.html), [Benjamin Monmege](https://dblp.org/pid/85/733.html)
-	⚙️
+	✅ Presents [MightyL](MightyL.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_14) Data-Driven Synthesis of Full Probabilistic Programs.
 	[Sarah E. Chasins](https://dblp.org/pid/76/10322.html), [Phitchaya Mangpo Phothilimthana](https://dblp.org/pid/127/3128.html)
-	⚙️
+	✅ Presents [DaPPer](DaPPer.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_6) Automated Recurrence Analysis for Almost-Linear Expected-Runtime Bounds.
 	[Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Hongfei Fu ](https://dblp.org/pid/19/7123.html), [Aniket Murhekar](https://dblp.org/pid/200/8297.html)
-	⚙️
+	✅ Nameless implementation, no link.
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_19) Lagrangian Reachabililty.
 	[Jacek Cyranka](https://dblp.org/pid/142/0441.html), [Md. Ariful Islam](https://dblp.org/pid/44/7214.html), [Greg Byrne](https://dblp.org/pid/185/1317.html), [Paul L. Jones](https://dblp.org/pid/05/2836.html), [Scott A. Smolka](https://dblp.org/pid/s/ScottASmolka.html), [Radu Grosu](https://dblp.org/pid/94/5421.html)
-	⚙️
+	✅ Nameless prototype, link leads to unreachable website (http://www.cs.cmu.edu/%7emdarifui/cav_codes.html). The algorithm is called LRT.
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_3) The Power of Symbolic Automata and Transducers.
 	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Margus Veanes](https://dblp.org/pid/42/6841.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_13) Synthesis with Abstract Examples.
 	[Dana Drachsler-Cohen](https://dblp.org/pid/155/1628.html), [Sharon Shoham](https://dblp.org/pid/92/128.html), [Eran Yahav](https://dblp.org/pid/54/5133.html)
-	⚙️
+	❌ They mention an implementation in the paper but the tool does not have a clear name nor does the code seem to be available.
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_22) DryVR - Data-Driven Verification and Compositional Reasoning for Automotive Systems.
 	[Chuchu Fan](https://dblp.org/pid/127/1756.html), [Bolun Qi](https://dblp.org/pid/182/9038.html), [Sayan Mitra](https://dblp.org/pid/07/3797.html), [Mahesh Viswanathan ](https://dblp.org/pid/23/2759-1.html)
-	⚙️
+	✅ Presents [DryVR](DryVR.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_1) Safety Verification of Deep Neural Networks.
 	[Xiaowei Huang ](https://dblp.org/pid/60/5414-1.html), [Marta Kwiatkowska](https://dblp.org/pid/k/MartaZKwiatkowska.html), [Sen Wang ](https://dblp.org/pid/69/6403-2.html), [Min Wu](https://dblp.org/pid/16/0.html)
-	⚙️
+	✅ Presents [DLV](DLV.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_5) Reluplex - An Efficient SMT Solver for Verifying Deep Neural Networks.
 	[Guy Katz](https://dblp.org/pid/23/10321.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [David L. Dill](https://dblp.org/pid/d/DavidLDill.html), [Kyle Julian](https://dblp.org/pid/195/5867.html), [Mykel J. Kochenderfer](https://dblp.org/pid/34/2029.html)
-	⚙️
+	✅ Presents [Reluplex](Reluplex.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_7) Markov Automata with Multiple Objectives.
 	[Tim Quatmann](https://dblp.org/pid/162/9630.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html)
-	⚙️
+	✅ Extends [Storm](Storm.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_11) STLInspector - STL Validation with Guarantees.
 	[Hendrik Roehm](https://dblp.org/pid/180/1879.html), [Thomas Heinz ](https://dblp.org/pid/27/1893-1.html), [Eva Charlotte Mayer](https://dblp.org/pid/202/8931.html)
-	⚙️
+	✅ Presents [STLInspector](STLInspector.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_17) Runtime Monitoring with Recovery of the SENT Communication Protocol.
 	[Konstantin Selyunin](https://dblp.org/pid/159/1606.html), [Stefan Jaksic](https://dblp.org/pid/172/4700.html), [Thang Nguyen](https://dblp.org/pid/50/8378.html), [Christian Reidl](https://dblp.org/pid/202/8954.html), [Udo Hafner](https://dblp.org/pid/202/8965.html), [Ezio Bartocci](https://dblp.org/pid/b/EzioBartocci.html), [Dejan Nickovic](https://dblp.org/pid/60/1425.html), [Radu Grosu](https://dblp.org/pid/94/5421.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_4) Maximum Satisfiability in Software Analysis - Applications and Techniques.
 	[Xujie Si](https://dblp.org/pid/142/8449.html), [Xin Zhang ](https://dblp.org/pid/76/1584-35.html), [Radu Grigore](https://dblp.org/pid/12/1369.html), [Mayur Naik](https://dblp.org/pid/92/6794.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_16) Montre - A Tool for Monitoring Timed Regular Expressions.
 	[Dogan Ulus](https://dblp.org/pid/137/4307.html)
-	⚙️
+	✅ Presents [Montre](Montre.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_2) Program Verification Under Weak Memory Consistency Using Separation Logic.
 	[Viktor Vafeiadis](https://dblp.org/pid/69/1549.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_15) Logical Clustering and Learning for Time-Series Data.
 	[Marcell Vazquez-Chanlatte](https://dblp.org/pid/192/1518.html), [Jyotirmoy V. Deshmukh](https://dblp.org/pid/42/160.html), [Xiaoqing Jin](https://dblp.org/pid/54/7661.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_28) Compositional Model Checking with Incremental Counter-Example Construction.
 	[Anton Wijs](https://dblp.org/pid/77/6678.html), [Thomas Neele](https://dblp.org/pid/169/6342.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63387-9_27) Starling - Lightweight Concurrency Verification with Views.
 	[Matt Windsor](https://dblp.org/pid/202/8969.html), [Mike Dodds](https://dblp.org/pid/77/665.html), [Ben Simner](https://dblp.org/pid/202/8946.html), [Matthew J. Parkinson](https://dblp.org/pid/19/5443.html)
-	⚙️
+	✅ Presents [Starling](Starling.md)
